examples/test/testpolicy14052.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14052
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key27: value35
      key31: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value1
          key26: value42
          key37: value1
      podSelector:
        matchLabels:
          key20: value44
          key13: value38
